--- a/package.json
+++ b/package.json
@@ -17,9 +17,14 @@
     "eslint-config-next": "13.4.5",
     "next": "13.4.5",
     "postcss": "8.4.24",
+    "puppeteer": "^20.7.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
+    "turndown": "^7.1.2",
     "typescript": "5.1.3"
+  },
+  "devDependencies": {
+    "@types/turndown": "^5.0.1"
   }
 }
