--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
     "next": "13.4.5",
+    "path": "^0.12.7",
     "postcss": "8.4.24",
     "puppeteer": "^20.7.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-markdown": "^8.0.7",
     "tailwindcss": "3.3.2",
     "turndown": "^7.1.2",
     "typescript": "5.1.3"
