--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
     "autoprefixer": "10.4.14",
+    "dotenv": "^16.1.4",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
     "next": "13.4.5",
+    "openai": "^3.3.0",
     "path": "^0.12.7",
     "postcss": "8.4.24",
     "puppeteer": "^20.7.1",
