--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "13.4.5",
     "openai": "^3.3.0",
     "path": "^0.12.7",
+    "pocketbase": "^0.15.2",
     "postcss": "8.4.24",
     "puppeteer": "^20.7.1",
     "react": "18.2.0",
